# pebble

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.claude-plugin/: marketplace.json
.factory/: memories.md
.factory-plugin/: marketplace.json
.github/workflows/: rust.yml
claude-code-plugin/.claude-plugin/: marketplace.json  plugin.json
claude-code-plugin/commands/: forget.md  pebble.md  remember.md  search.md
claude-code-plugin/hooks/: hooks.json
claude-code-plugin/hooks/scripts/: post-compact.sh  post-tool-use.sh  session-start.sh  stop.sh
claude-code-plugin/skills/pebble/: SKILL.md
claude-code-plugin/tests/: smoke.sh
config/: dependency-decisions.txt  dev-tools.txt  plan2-dependencies.txt
crates/pebble-cli/: Cargo.toml
crates/pebble-cli/src/: main.rs  mcp.rs  mcp_response.rs  mcp_schemas.rs  (+2 more)
crates/pebble-core/: Cargo.toml
crates/pebble-core/src/: error.rs  lib.rs  personal.rs  personal_promote.rs
crates/pebble-core/src/domain/: evidence.rs  identity.rs  mod.rs  revision.rs
crates/pebble-core/src/embeddings/: consent.rs  manifest.rs  mod.rs  model.rs  runtime.rs
crates/pebble-core/src/index/: building_boundary.rs  compiler.rs  cross_index.rs  current.rs  generation.rs  generation_fs.rs  generation_races.rs  graph.rs  graph_transaction.rs  graph_writer.rs  lexical.rs  lexical_races.rs  lexical_reader.rs  mod.rs  pinned_directory.rs  pinned_directory_platform.rs  retrieval.rs  schema.rs  schema_shape.rs
crates/pebble-core/src/ingestion/: chunk.rs  language.rs  mod.rs  parser.rs  queries.rs  scip.rs  scip_wire.rs
crates/pebble-core/src/knowledge/: claims.rs  mod.rs
crates/pebble-core/src/knowledge/note/: mod.rs  scan.rs  types.rs
crates/pebble-core/src/knowledge/updates/: citations.rs  mod.rs  rows.rs
crates/pebble-core/src/repository/: config.rs  config_fs.rs  git.rs  git_status.rs  identity.rs  layout.rs  mod.rs  registry.rs  registry_race.rs  snapshot.rs  traversal.rs
crates/pebble-core/src/repository/registry/: tests.rs
crates/pebble-core/src/retrieval/: candidate.rs  contradiction.rs  mod.rs  packet.rs  ranking.rs  request.rs  trace.rs
crates/pebble-core/src/service/: citation_race.rs  embeddings_ops.rs  health.rs  mod.rs  operations.rs  personal_ops.rs  trace_race.rs  workspace_ops.rs
crates/pebble-core/src/service/health/: tests.rs
crates/pebble-core/src/service/knowledge_ops/: citations.rs  errors.rs  mod.rs
crates/pebble-core/src/service/operations/: tests.rs
crates/pebble-core/src/vectors/: flat_index.rs  format.rs  mod.rs
crates/pebble-core/src/watcher/: coalesce.rs  mod.rs  retry.rs  retry_tests.rs  roots.rs  service.rs  tests.rs
crates/pebble-core/src/workspace/: manifest.rs  mod.rs  search.rs
crates/pebble-core/tests/: compiler.rs  domain.rs  embeddings.rs  generation_recovery.rs  git_adversarial.rs  graph.rs  knowledge.rs  lexical.rs  living_notes.rs  personal.rs  polyglot.rs  repository.rs  repository_hardening.rs  retrieval.rs  retrieval_adversarial.rs  retrieval_fidelity.rs  scip.rs  traversal.rs  vectors.rs  vectors_retrieval.rs  watcher.rs  workspace.rs
factory-droid-plugin/: AGENTS.md  personal-AGENTS.md.example
factory-droid-plugin/.factory-plugin/: marketplace.json  plugin.json
factory-droid-plugin/commands/: forget.md  pebble.md  profile.md  promote.md  recall.md  remember.md
factory-droid-plugin/hooks/: hooks.json
factory-droid-plugin/tests/: smoke.sh
gemini-cli-plugin/: GEMINI.md  gemini-extension.json
gemini-cli-plugin/agents/: pebble-reviewer.md
gemini-cli-plugin/commands/: forget.toml  note.toml  pebble.toml  profile.toml  recall.toml  remember.toml  search.toml
gemini-cli-plugin/hooks/: hooks.json
gemini-cli-plugin/tests/: smoke.sh
pebble-mcp/: .gitignore  package.json  tsconfig.json
pebble-mcp/src/: ids.ts  index.ts  paths.ts  types.ts
pebble-mcp/tests/: cli-commit-turn.test.ts  cli-review-turn.test.ts  cli-seed-benchmark.test.ts  cli.test.ts  git.test.ts  ids.test.ts  integration.test.ts  judge.test.ts  log.test.ts  mcp.test.ts  paths.test.ts  projector.test.ts  render.test.ts  retrieval.test.ts  reviewer.test.ts  schema.test.ts  types.test.ts  watcher.test.ts
plugins/gemini-cli-plugin/: GEMINI.md
scripts/: capture-mvp-baseline.sh  check-vet-exemptions.sh  install-rust-tools.sh  measure-short-process.py  validate-plan2-acceptance.sh  validate-research-results.py  validate-research.sh  validate.sh
supply-chain/: audits.toml  config.toml
xtask/src/: dependency_records.rs  file_size.rs  main.rs
xtask/tests/: dependency_escape.rs  dependency_records.rs  file_size.rs  plan2_dependencies.rs
(+124 files in other folders)
