[workspace]
members = ["crates/pebble-core", "crates/pebble-cli", "xtask"]
exclude = ["research"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.96.1"
license = "MIT"
repository = "https://github.com/skyline-9/pebble"

[workspace.dependencies]
blake3 = "=1.8.5"
candle-core = "=0.11.0"
candle-nn = "=0.11.0"
candle-transformers = "=0.11.0"
clap = { version = "=4.6.1", default-features = false, features = ["help", "std", "usage"] }
ignore = "=0.4.28"
notify = "=8.2.0"
pulldown-cmark = { version = "=0.13.4", default-features = false }
rmcp = { version = "=1.8.0", default-features = false, features = ["server", "transport-io"] }
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled"] }
safetensors = "=0.7.0"
scip = { version = "=0.6.1", default-features = false }
serde = { version = "=1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "=1.0.150", default-features = false, features = ["std"] }
sha2 = { version = "=0.10.9", default-features = false }
tantivy = { version = "=0.26.1", default-features = false, features = ["mmap"] }
thiserror = { version = "=2.0.18", default-features = false, features = ["std"] }
tokenizers = { version = "=0.23.1", default-features = false, features = ["onig"] }
tokio = { version = "=1.52.3", default-features = false, features = ["io-std", "macros", "rt-multi-thread", "sync", "time"] }
toml = { version = "=1.1.2", default-features = false, features = ["parse", "serde"] }
tree-sitter = { version = "=0.26.8", default-features = false, features = ["std"] }
tree-sitter-c = { version = "=0.24.2", default-features = false }
tree-sitter-c-sharp = { version = "=0.23.5", default-features = false }
tree-sitter-cpp = { version = "=0.23.4", default-features = false }
tree-sitter-go = { version = "=0.25.0", default-features = false }
tree-sitter-java = { version = "=0.23.5", default-features = false }
tree-sitter-javascript = { version = "=0.25.0", default-features = false }
tree-sitter-kotlin-ng = { version = "=1.1.0", default-features = false }
tree-sitter-python = { version = "=0.25.0", default-features = false }
tree-sitter-ruby = { version = "=0.23.1", default-features = false }
tree-sitter-rust = { version = "=0.24.2", default-features = false }
tree-sitter-swift = { version = "=0.7.3", default-features = false }
tree-sitter-typescript = { version = "=0.23.2", default-features = false }
ulid = "=1.2.1"
ureq = { version = "=3.1.2", default-features = false, features = ["rustls"] }
yaml-rust2 = { version = "=0.11.0", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
undocumented_unsafe_blocks = "deny"
unwrap_used = "deny"

[profile.dev]
debug = 1

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
